Anthropic MCP weather server and client

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "anthropic>=0.67.0",
     "mcp[cli]>=1.14.0",
     "openai>=1.102.0",
+    "python-dotenv>=1.1.1",
     "schedule>=1.2.2",
 ]
