--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,7 @@
       "console": "integratedTerminal",
       "cwd": "${workspaceFolder}",
       "python": "${workspaceFolder}/.venv/Scripts/python.exe",
+      "args": ["src/mcp_server_weather.py"],
       "env": {
         "PYTHONPATH": "${workspaceFolder}"
       },
